# wirksam

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  docker-compose.yml  justfile
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/alembic/versions/: 20260301_0001_add_events_duty_slots_bookings.py  20260309_0001_add_time_fields_to_user_availability_.py  20260309_0002_add_default_time_fields_to_user_.py  20260311_0001_add_picture_to_users.py  20260312_0001_add_email_verified_to_users.py  20260312_0002_add_rejection_reason_to_users.py  20260312_0003_add_site_settings_table.py  20260313_0001_add_notification_system_tables.py  20260404_0001_add_on_delete_cascade_to_user_.py
backend/app/api/: api.py  deps.py
backend/app/api/routes/: booking_reminders.py  bookings.py  dashboard.py  debug.py  demo_data.py  duty_slots.py  event_groups.py  events.py  reporting.py  site_settings.py  testing.py  users.py
backend/app/core/: auth.py  config.py  errors.py
backend/app/crud/: __init__.py  base.py  booking.py  booking_reminder.py  duty_slot.py  event.py  notification.py  notification_subscription.py  notification_type.py  push_subscription.py  site_settings.py  telegram_binding.py  user_availability.py
backend/app/logic/: slot_generator.py
backend/app/logic/notifications/: __init__.py  registry.py  reminder_poller.py  seeder.py  service.py  triggers.py
backend/app/logic/utils/: email_utils.py  pydantic_jsonb.py
backend/app/models/: __init__.py  booking.py  duty_slot.py  event.py  event_group.py  notification.py  site_settings.py  slot_batch.py  user.py  user_availability.py
backend/app/schemas/: booking.py  booking_reminder.py  demo_data.py  duty_slot.py  event.py  notification.py  reporting.py  sidebar.py  site_settings.py  slot_batch.py  user.py  user_availability.py  users.py
backend/app/scripts/: check_upcoming_slots.py
backend/scripts/: test.sh
backend/tests/: conftest.py
backend/tests/api/: test_deps.py
backend/tests/api/routes/: test_booking_reminders.py  test_bookings.py  test_dashboard.py  (+21 more)
backend/tests/crud/: test_booking.py  test_booking_reminder.py  test_calendar_feed.py  test_duty_slot.py  test_event.py  test_event_group.py  test_notification.py  test_notification_subscription.py  test_notification_type.py  test_push_subscription.py  test_site_settings.py  test_user.py
backend/tests/fixtures/: auth.py  bookings.py  client.py  database.py  duty_slots.py  event_groups.py  events.py
backend/tests/logic/: test_calendar_feed.py  test_db_utils.py  test_notification_messages.py  test_notification_registry.py  test_notification_service.py
(+209 files in other folders)
