[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.13,<4.0"
dependencies = [
    # Updated FastAPI to latest version (0.116.1) - supports Python 3.13
    "fastapi[standard]>=0.115.14,<1.0.0",

    # Updated dependencies with latest compatible versions
    "python-multipart>=0.0.22,<1.0.0",
    "email-validator>=2.3.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "tenacity>=9.1.4,<10.0.0",

    # Updated Pydantic to latest (2.11.7)
    "pydantic>=2.12.5,<3.0.0",
    "fastapi-mail>=1.6,<2.0",
    "jinja2>=3.1.6,<4.0.0",
    "alembic>=1.18.3,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "psycopg[binary]>=3.3.2,<4.0.0",
    "sqlmodel>=0.0.32,<1.0.0",
    "asyncpg>=0.31.0,<1.0.0",

    # Pin bcrypt until passlib supports the latest
    "bcrypt>=4.0.1",

    # Updated Pydantic Settings to latest (2.10.1)
    "pydantic-settings>=2.12.0,<3.0.0",
    "sentry-sdk[fastapi]>=2.52.0,<3.0.0",
    "pyjwt>=2.11.0,<3.0.0",

    # Force newer httptools version for Python 3.13 compatibility
    "httptools>=0.7.1,<1.0.0",
    "auth0-fastapi-api>=1.0.0b5",
    "pywebpush>=2.0.0,<3.0.0",
    "icalendar>=6.0.0,<7.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=0.26.0,<1.0.0",
    "basedpyright>=1.29.0,<2.0.0",
    "ruff>=0.15.0,<1.0.0",
    "pre-commit>=4.5.1,<5.0.0",
    "coverage>=7.13.3,<8.0.0",
    "pytest-testmon>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
typeCheckingMode = "strict"
exclude = ["venv", ".venv", "**/alembic"]
reportMissingTypeStubs = "warning"

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
